# agintic-customer-support

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  create_neon_role.py  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  refactor_models.py  setup_test_user.py  task.md  test_out_new.txt  test_output.txt  tsconfig.json  verify_roles.py
.agent/: CUSTOMER_SUPPORT_PLATFORM_PLAN.md
.github/workflows/: ci.yml
apps/api/: main.py  rate_limiter.py
apps/api/agent/: function_calling.py  interfaces.py  models.py  pipeline.py  router.py  stages.py
apps/api/auth/: deps.py  router.py  utils.py
apps/api/conversation/: manager.py  models.py  router.py  summarizer.py
apps/api/core/: __init__.py  config.py  database.py  interfaces.py  rls.py
apps/api/eval/: ci_runner.py  dataset.py  harness.py  ragas_runner.py
apps/api/events/: __init__.py  redis_bus.py  subscribers.py
apps/api/guardrails/: guardrails.py
apps/api/memory/: layers.py
apps/api/models/: router.py
apps/api/monitoring/: alerts.py  cost_tracker.py  models.py  router.py
apps/api/prompts/: models.py  registry.py  router.py
apps/api/rag/: chunkers.py  indexer.py  loaders.py  models.py  pipeline.py  reranker.py  retriever.py  router.py  semantic_cache.py
apps/api/tenants/: cold_start.py  models.py  models_ext.py  quota.py  router.py
apps/api/tools/: audit.py  mcp_client.py  mcp_schema.py  models.py  registry.py  router.py  tools.py  webhooks.py
apps/dashboard/: .eslintrc.cjs  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/widget/: chat-widget.js
docs/: ISSUES_AND_UNFINISHED_FEATURES.md  README.md  authentication.md  examples.md  webhooks.md  widget-embedding.md
docs/deployment/: database_roles.md
infra/: docker-compose.yml
infra/postgres/: init.sql
infra/terraform/: main.tf  outputs.tf  variables.tf
k8s/: api-service.yaml  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres-service.yaml  qdrant-service.yaml  redis-service.yaml  secrets.yaml
migrations/: env.py
migrations/versions/: 2739e75eea89_initial_schema.py  a1b2c3d4e5f6_refine_bootstrap_rls.py  e93d25cbd9a9_add_agents_table_and_conversation_agent_.py
scripts/: migrate.sh  provision_app_role.sql  provision_tenant.py  run_eval_ci.sh  start.sh  verify_rls_schema.py
tests/: conftest.py  test_agent.py  test_api_integration.py  test_auth.py  test_guardrails.py  test_mcp.py  test_monitoring.py  test_rls_integration.py  test_tools.py  test_webhooks.py  test_widget.py
tests/core/: test_adapters.py  test_interfaces.py  test_rls_session.py
tests/events/: test_redis_bus.py
tests/load/: chat.js  health.js  smoke.js  tenants.js  webhooks.js
tests/rag/: test_chunkers.py  test_loaders.py  test_pipeline.py  test_semantic_cache.py
(+149 files in other folders)
